--- a/local_settings.py.sample
+++ b/local_settings.py.sample
@@ -1,12 +1,15 @@
-from dropbox import helper as dropbox_helper
-
-INSTAGRAM_REDIRECT_URI = "http://localhost:8080/instagram/callback"
-INSTAGRAM_PUSH_CALLBACK = "http://example.localtunnel.com/instagram/push_callback"
+INSTAGRAM_REDIRECT_URI = "http://xxxx.localtunnel.com/instagram/callback"
+INSTAGRAM_PUSH_CALLBACK = "http://xxxx.localtunnel.com/instagram/push_callback"
 INSTAGRAM_CONFIG = {
         "client_id": "CLIENT_ID",
         "client_secret": "CLIENT_SECRET",
         "redirect_uri": INSTAGRAM_REDIRECT_URI
 }
 
-DROPBOX_CALLBACK = "http://localhost:8080/dropbox/callback"
-DROPBOX_CONFIG = dropbox_helper.load_config("local_dropbox.ini")
+WEIBO_CONFIG = {
+		"app_key": "APP_KEY",
+		"app_secret": "APP_SECRET",
+		"redirect_uri": "http://url/to/redir"
+}
+WEIBO_ACCESS_TOKEN = "YOUR_WEIBO_ACCESS_TOKEN"
+WEIBO_ACCESS_TOKEN_EXPIRE = 1346935374
